        PR c++/34962, c++/34937, c++/34939         * decl2.c (is_late_template_attribute): Always defer attributes         vector_size and weak.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@132297 138bc75d-0d04-0410-961f-82ee72b054a4